tests/errors/linear_err/linear_err.c
#error linear_err.linear_err:6:7 This linear variable is not used.
#error linear_err.linear_err:12:26 This linear variable is already used and cannot be used here.
#error linear_err.linear_err:18:15 This linear variable is already used and cannot be used here.
#error linear_err.linear_err:24:7 This linear variable is not used.
#error linear_err.linear_err:30:28 This linear variable must not be used in this branch because the previous branch does not use it.
#error linear_err.linear_err:41:10 This branch must use a particular set of variables that are used in the previous branch. Variables: [part]
#error linear_err.linear_err:46:9 This linear variable is not used.
#error linear_err.linear_err:52:7 This linear variable is not used.
#error linear_err.linear_err:55:28 This linear variable must not be used in local functions and function expressions.
#error linear_err.linear_err:63:14 This linear variable cannot be defined by AS pattern.
#error linear_err.linear_err:69:7 This linear variable is not used.
#error linear_err.linear_err:76:8 This linear variable is not used.
#error linear_err.linear_err:84:11 Functions that take a linear value can't be partially applied.
#error linear_err.linear_err:101:7 This linear variable is not used.
#error linear_err.linear_err:105:7 This linear variable is not used.
#error linear_err.linear_err:112:7 This linear variable is not used.
#error linear_err.linear_err:119:7 This linear variable is not used.
#error linear_err.linear_err:125:13 This static variable cannot be linear type.
#error linear_err.linear_err:131:14 This generic function cannot bind type variables to linear types.
#error linear_err.linear_err:137:37 Fields cannot be linear for now.
#error linear_err.linear_err:141:26 This linear variant is invalid for now. This error happens when a union contains another linear union types. Consider to use the Linear type directly.
